@@ -2,8 +2,8 @@ dependencies {
     implementation(project(":agent-bridge"))
     implementation 'jakarta.jms:jakarta.jms-api:3.0.0'
 
-    testImplementation('org.apache.activemq:artemis-jakarta-client:2.17.0')
-    testImplementation("org.apache.activemq:artemis-junit:2.17.0")
+    testImplementation('org.apache.activemq:artemis-jakarta-client:2.19.0')
+    testImplementation("org.apache.activemq:artemis-junit:2.19.0")
 }
 
 jar {
@@ -12,6 +12,16 @@ jar {
 
 verifyInstrumentation {
     passesOnly 'jakarta.jms:jakarta.jms-api:[3.0.0-RC1,)'
+}
+
+test {
+    // ActiveMQ calls javax.security.auth.Subject.getSubject. Java 23 added logic that will
+    // throw an exception if security manager is not enabled.
+    // They have a ticket regarding this: https://issues.apache.org/jira/browse/ARTEMIS-4975
+    // but it is unlikely the fix can be used here because it will likely not be Java 8 compatible.
+    if (project.hasProperty("test23")) {
+        jvmArgs += '-Djava.security.manager=allow'
+    }
 }
 
 site {
